--- a/app/views/lists/show.html.erb
+++ b/app/views/lists/show.html.erb
@@ -1,24 +1,32 @@
 <div class="banner-show" style="background-image: linear-gradient(rgba(0,0,0,0.4),rgba(0,0,0,0.4)), url(https://bordalo.observador.pt/v2/q:70/rs:fill:2560:1439/c:2560:1439:nowe:0:101/plain/https://s3.observador.pt/wp-content/uploads/2015/08/22100054/GettyImages-108387402-scaled.jpg);">
   <div class="container">
-    <h1> <%= @list.name %> </h1>
+    <h1> <%= @list.name.upcase %> </h1>
     <div class="text-center">
       <%= link_to "Add a movie", new_list_bookmark_path(@list), class: "btn btn-ghost" %>
     </div>
   </div>
 </div>
 
-<% @list.bookmarks.each do |bookmark| %>
-  <div class="card-trip">
-    <%= image_tag bookmark.movie.poster_url %>
-    <div class="card-trip-infos">
-      <div>
-        <h2><%= bookmark.movie.title %> - <%= bookmark.movie.rating %></h2>
-        <p><%= bookmark.movie.overview %></p>
-        <p><strong><%= bookmark.comment %></strong></p>
+<div class="d-flex flex-row">
+  <% @list.bookmarks.each do |bookmark| %>
+    <div class="card-trip">
+      <%= image_tag bookmark.movie.poster_url %>
+      <div class="card-trip-infos">
+        <div>
+          <h2><%= bookmark.movie.title %> - <%= bookmark.movie.rating %> <i class="fa-solid fa-star text-warning"></i></h2>
+          <p><%= bookmark.movie.overview %></p>
+          <hr>
+          <i class="fa-solid fa-quote-left"></i>
+          <p><strong><%= bookmark.comment %></strong></p>
+        </div>
+
       </div>
       <div>
-      <p class="card-trip-pricing"> <strong> <%= link_to "delete", list_bookmark_path(@list, bookmark.id), data: {turbo_method: :delete, turbo_confirm: "Are you sure?"}  %> </strong></p>
+        <p class="card-trip-pricing pe-3 pb-3 d-flex flex-row-reverse">
+          <strong> <%= link_to "delete",
+          list_bookmark_path(@list, bookmark.id),
+          data: {turbo_method: :delete, turbo_confirm: "Are you sure?"}  %> </strong></p>
       </div>
     </div>
-  </div>
-<% end %>
+  <% end %>
+</div>
