--- a/app/views/lists/show.html.erb
+++ b/app/views/lists/show.html.erb
@@ -7,26 +7,28 @@
   </div>
 </div>
 
-<div class="d-flex flex-row">
-  <% @list.bookmarks.each do |bookmark| %>
-    <div class="card-trip">
-      <%= image_tag bookmark.movie.poster_url %>
-      <div class="card-trip-infos">
-        <div>
-          <h2><%= bookmark.movie.title %> - <%= bookmark.movie.rating %> <i class="fa-solid fa-star text-warning"></i></h2>
-          <p><%= bookmark.movie.overview %></p>
-          <hr>
-          <i class="fa-solid fa-quote-left"></i>
-          <p><strong><%= bookmark.comment %></strong></p>
-        </div>
+<div class="container">
+  <div class="d-flex flex-row">
+    <% @list.bookmarks.each do |bookmark| %>
+      <div class="card-trip">
+        <%= image_tag bookmark.movie.poster_url %>
+        <div class="card-trip-infos">
+          <div>
+            <h2><%= bookmark.movie.title %> - <%= bookmark.movie.rating %> <i class="fa-solid fa-star text-warning"></i></h2>
+            <p><%= bookmark.movie.overview %></p>
+            <hr>
+            <i class="fa-solid fa-quote-left"></i>
+            <p><strong><%= bookmark.comment %></strong></p>
+          </div>
 
+        </div>
+        <div>
+          <p class="card-trip-pricing pe-3 pb-3 d-flex flex-row-reverse">
+            <strong> <%= link_to "X",
+            list_bookmark_path(@list, bookmark.id),
+            data: {turbo_method: :delete, turbo_confirm: "Are you sure?"}  %> </strong></p>
+        </div>
       </div>
-      <div>
-        <p class="card-trip-pricing pe-3 pb-3 d-flex flex-row-reverse">
-          <strong> <%= link_to "delete",
-          list_bookmark_path(@list, bookmark.id),
-          data: {turbo_method: :delete, turbo_confirm: "Are you sure?"}  %> </strong></p>
-      </div>
-    </div>
-  <% end %>
+    <% end %>
+  </div>
 </div>
