--- a/app/views/lists/index.html.erb
+++ b/app/views/lists/index.html.erb
@@ -19,3 +19,5 @@
 <div class="text-center">
   <%= link_to "Create a movie list", new_list_path, class: "btn btn-gradient" %>
 </div>
+
+<%= cl_image_tag("vowfwikarisugsfb0xtj", width: 400, height: 300, crop: :fill) %>
