--- a/app/views/lists/new.html.erb
+++ b/app/views/lists/new.html.erb
@@ -3,6 +3,7 @@
   <p>
   <%= simple_form_for(@list) do |f| %>
     <%= f.input :name %>
+    <%= f.input :photo, as: :file %>
     <%= f.submit class: "btn btn-gradient"%>
   <% end %>
   </p>
