--- a/app/assets/stylesheets/components/_card.scss
+++ b/app/assets/stylesheets/components/_card.scss
@@ -8,11 +8,18 @@
   justify-content: center;
   align-items: center;
   color: white;
+  text-decoration: none;
   font-size: 24px;
   font-weight: bold;
   text-shadow: 1px 1px 3px rgba(0,0,0,0.2);
   border-radius: 5px;
   box-shadow: 0 0 15px rgba(0,0,0,0.2);
+}
+
+.card-category a {
+  text-decoration: none;
+  color: yellow;
+  font-size: 24px;
 }
 ///////////////////////////////////////////////////////////////////////////////
 .card-category-new-list {
